# ml-rl-3dproject

./: Cargo.toml
assets/shaders/: drone_material.wgsl
model/: .gitignore  agent.py  data.py  model.py  model_not_jumping.keras  pyproject.toml  rw_lock.py  server.py  simulation.py
model/src/: agent.py  data.py  hyperparameters.py  model.py  server.py  simulation.py
src/: ai.rs  camera_controller.rs  component.rs  drone.rs  game.rs  human.rs  main.rs  map.rs  objective.rs  player.rs  sensor.rs  simulation.rs  ui.rs
src/ai/: evaluation.rs  input.rs  input_recorder.rs  model_control_pipeline.rs  player.rs  script.rs
src/component/: arrow.rs  player_character.rs
src/human/: camera_controller.rs  debug_controls.rs  observer_controls.rs  player.rs
src/sensor/: ground_sensor.rs  objective.rs  player_vibrissae.rs
