[package]
name = "Drone"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_dev_tools", "bevy_mesh_picking_backend", "bevy_gizmos"] }
bevy_rapier3d = { version = "0.31.0", features = ["dim3", "debug-render", "enhanced-determinism"] }
bevy_math = "0.16.1"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }

[build]
target = "x86_64-unknown-linux-gnu"

[profile.release]
opt-level = 3
lto = false
debug = false
overflow-checks = true
debug-assertions = false
incremental = false
codegen-units = 1
