[package]
name = "Drone"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_dev_tools", "bevy_mesh_picking_backend", "bevy_gizmos", "multi_threaded"] }
avian3d = "0.3.1"
bevy_math = "0.16.1"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"

[build]
target = "x86_64-unknown-linux-gnu"

[profile.release]
opt-level = 3
lto = false
debug = false
overflow-checks = true
debug-assertions = false
incremental = false
codegen-units = 1
