[package]
name = "Drone"
version = "0.1.0"
edition = "2024"

[dependencies]
#bevy = { version = "0.16.1", default-features = false, features = ["bevy_dev_tools", "bevy_mesh_picking_backend", "bevy_gizmos", "bevy_log", "bevy_ui", "bevy_text", "bevy_asset", "bevy_window", "bevy_audio"] }
#bevy_rapier3d = { version = "0.31.0", default-features = false, features = ["dim3", "debug-render", "simd-stable"] }
bevy = { version = "0.16.1", features = ["bevy_dev_tools", "bevy_mesh_picking_backend", "bevy_gizmos", "multi_threaded"] }
bevy_rapier3d = { version = "0.31.0", features = ["dim3", "debug-render", "parallel", "simd-stable"] }
bevy_math = "0.16.1"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
clap = { version = "4.5.45", features = ["derive"] }
log = "0.4.27"
crossbeam-channel = "0.5.15"

[build]
target = "x86_64-unknown-linux-gnu"

